--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,5 +1,16 @@
 .header {
-  background-color: azure;
+  background-color: #000000;
+  width: 100%;
+  height: 120px;
+  padding: 10px 20px;
+}
+
+.header img.logo{
+  height: 100px;  
+}
+
+.menu-item {
+  margin-right: 10px;
 }
 
 .logo {
